use spark-1.4